c4prj2_input/grade.txt
Grading at Wed Mar 10 09:55:04 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:38:29: error: ‘x’ undeclared (first use in this function)
       (*(fc->decks[i].cards[x])).value=(*(deck->cards[i])).value;
                             ^
future.c:38:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
